--- a/src/app/components/media-player/audio-player/audio-player.component.scss
+++ b/src/app/components/media-player/audio-player/audio-player.component.scss
@@ -4,7 +4,7 @@
   height: 100%;
 
   &.footer-mode {
-    height: 80px;
+    height: 64px;
   }
 
   &.compact-mode {
@@ -16,7 +16,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background: var(--mat-toolbar-container-background-color, var(--mat-sys-surface));
+  background: transparent;
 }
 
 .audio-player-footer {
