--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -13,15 +13,15 @@
 
     // Floating pill layout (Always applied)
     bottom: 24px;
-    left: 50%;
-    transform: translateX(-50%);
-    right: auto;
-    width: auto;
-    min-width: 320px;
-    max-width: calc(100% - 32px);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: min(600px, calc(100% - 32px));
     height: 64px;
     border-radius: 32px;
     padding-bottom: 0;
+    transform: none;
 
     // Glass effect - IMPORTANT: Reset background first
     background: initial;
@@ -68,6 +68,8 @@
     height: 100vh;
     z-index: 2000;
     background: #000;
+    max-width: 100%;
+    border-radius: 0;
   }
 }
 
