Enhance video player functionality: add video source binding to video elements for improved playback

--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -1,4 +1,5 @@
 :host {
+  display: block;
   background: var(--theme-background-color,
       var(--mat-toolbar-container-background-color, var(--mat-sys-surface)));
   z-index: 1500;
